--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "zod": "^3.25.28"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/pg": "^8.16.0"
   }
 }
